adjusted responsivness for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     </div>
 
     <div class="result-container">
-        <h3 class="longest-words-title"></h3>
+        <h3 class="longest-words__title"></h3>
         <div class="longest-words__wrapper"></div>
+        <h3 class="words-counted__title"></h3>
         <div class="words-counted__wrapper"></div>
     </div>
 
