added palindrome function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div class="wrapper">
        <div class="container">
  
-    <h1 class="title">Text <span class="word-text">Word</span> Count</h1 class="title">
+    <h1 class="title">Test <span class="word-text">Text</span> Variety</h1 class="title">
         
     <p class="total-words-paragraph"><span class="total-words"></span></p>
     <div class="words-variety__wrapper"></div>
@@ -30,6 +30,7 @@
     <div class="result-container">
         <h3 class="longest-words__title"></h3>
         <div class="longest-words__wrapper"></div>
+        <div class="palindromes__wrapper"></div>
         <h3 class="words-counted__title"></h3>
         <div class="words-counted__wrapper"></div>
     </div>
